# cballm

./: .gitignore  CBALLM_v2_UNIFIED.md  README.md  __main__.py  architect_config.json  brain.py  cli.py  composite_score.py  diagnostics.py  display.py  domain_prior.py  engine.py  exploration.py  hooks.py  prompt_builder.py  pyproject.toml  session.py  smp_benchmark.json  synergy.py
benchmark_data/: exchange_rate.csv
blocks/: __init__.py  backbone.py  base.py  builder.py  channel_mixer.py  constraint.py  decomposition.py  encoder.py  head.py  loss.py  normalizer.py  regime.py  temporal_mixer.py  trainer_engine.py
domain_priors/: energy_smp.yaml
features/: engineer.py  templates.yaml
ontology/: block_catalog.yaml  compatibility.yaml  kg_engine.py  recommendations.yaml
recipes/: registry.py
recipes/verified/: DLinear.yaml  PatchTST.yaml  TSMixer_CI.yaml  TimesNet_style.yaml  iTransformer.yaml
rules/: energy.md  evaluation.yaml  general.md  leakage.yaml  leakage_prevention.md  training.yaml
tools/: data_loader.py  search_helper.py
workers/: __init__.py  architect.py  base.py  critic.py  engineer.py  kg_matcher.py  scout.py  trainer.py
