[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex"
version = "0.1.0"
description = "AI Data Scientist Orchestrator — 도메인 룰 기반 자동 예측 파이프라인"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.scripts]
cortex = "cortex.cli:main"

[tool.setuptools.packages.find]
include = ["cortex*"]
